package com.company.progsp6_server.Database;

public class Config {
    protected String dbHost = "localhost";
    protected String dbPort = "3306";
    protected String dbUser = "root";
    protected String dbPass = "tankdollar";
    protected String dbName = "progsp6";
}
